# Secure-My-Email

./: Unknown.json  client_secrets_file.json  gmail_secret_file
Secure My Email/: main.cpp
Secure My Email.xcodeproj/: project.pbxproj
Secure My Email.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Secure My Email.xcodeproj/project.xcworkspace/xcuserdata/Divakar.xcuserdatad/: UserInterfaceState.xcuserstate
Secure My Email.xcodeproj/xcuserdata/Divakar.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Secure My Email.xcodeproj/xcuserdata/Divakar.xcuserdatad/xcschemes/: Secure My Email.xcscheme  xcschememanagement.plist
Secure My Email/googleapis/client/auth/: file_credential_store.cc  oauth2_authorization.cc  oauth2_authorization.h
Secure My Email/googleapis/client/data/: openssl_codec.h
Secure My Email/googleapis/client/transport/: curl_http_transport.cc
Secure My Email/googleapis/strings/: stringpiece.cc  stringpiece.h
external_dependencies/install/include/openssl/: opensslconf.h
external_dependencies/install/lib/: libcurl.4.dylib  libcurl.la  libgflags.2.dylib  libgflags.la  libgflags_nothreads.2.dylib  libgflags_nothreads.la
external_dependencies/install/lib/pkgconfig/: libcrypto.pc  libcurl.pc  libgflags.pc  libgflags_nothreads.pc  libssl.pc  openssl.pc
external_dependencies/install/ssl/man/man1/: CA.pl.1  asn1parse.1  ca.1  crl.1  crl2pkcs7.1  dgst.1  dhparam.1  dsa.1  dsaparam.1  ec.1  ecparam.1  enc.1  errstr.1  (+21 more)
service_apis/gmail/: CMakeLists.txt  descriptor.json  readme.html
service_apis/gmail/google/gmail_api/: CMakeLists.txt  auto_forwarding.cc  auto_forwarding.h  batch_delete_messages_request.cc  batch_delete_messages_request.h  draft.cc  draft.h  filter.cc  filter.h  filter_action.cc  filter_action.h  filter_criteria.cc  filter_criteria.h  forwarding_address.cc  forwarding_address.h  gmail_api.h  gmail_service.cc  gmail_service.h  history.cc  history.h  history_label_added.cc  history_label_added.h  history_label_removed.cc  history_label_removed.h  history_message_added.cc  history_message_added.h  history_message_deleted.cc  history_message_deleted.h  imap_settings.cc  imap_settings.h  label.cc  label.h  list_drafts_response.cc  list_drafts_response.h  list_filters_response.cc  list_filters_response.h  list_forwarding_addresses_response.cc  list_forwarding_addresses_response.h  list_history_response.cc  list_history_response.h  (+36 more)
(+227 files in other folders)
